<resources>
    <string name="app_name">Norwegian Rails</string>
    <string name="search">Search</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="ticket">Ticket</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="whereFrom">Where from?</string>
    <string name="whereTo">Where to?</string>
    <string name="edit">Edit</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>
