<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.SearchTo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/whereFromLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:weightSum="3"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/whereFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/whereFrom"
            android:layout_weight="2"
            android:textSize="20sp"
            android:layout_marginBottom="20dp" />
        <ImageView
            android:id="@+id/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_clear"
            android:contentDescription="Clear Selection" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_below="@+id/whereFromLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="2dp">


            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/suggestion_box"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:completionThreshold="1"
                android:hint="@string/whereTo"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</FrameLayout>