<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".ui.Profile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="6dp"
                android:paddingEnd="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:paddingTop="6dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </ScrollView>

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRegister"
        android:layout_marginBottom="12dp"
        android:gravity="end"
        android:padding="10dp"
        android:text="Register"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="1dp"
        android:background="@color/colorAccent"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textStyle="bold" />

    </LinearLayout>
