<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SelectDateTime">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/whereFromLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/fromTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/whereFrom"
                android:textSize="20sp"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/whereFromLayout"
           >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textSize="20dp"
                android:layout_margin="10dp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:id="@+id/in_date"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:id="@+id/btn_date"
                android:layout_alignBottom="@+id/in_date"
                android:layout_toRightOf="@+id/in_date"
                android:layout_toEndOf="@+id/in_date" />

            <TextView android:layout_below="@id/btn_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtTime"
                android:text="Time"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:textStyle="bold"
                />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/in_time"
                android:layout_below="@+id/txtTime"
                android:focusableInTouchMode="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit"
                android:id="@+id/btn_time"
                android:layout_below="@+id/txtTime"
                android:layout_alignLeft="@+id/btn_date"
                android:layout_alignStart="@+id/btn_date" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSearch"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="183dp"
                android:text="@string/search"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </RelativeLayout>

    </RelativeLayout>

</FrameLayout>